update Java 12 examples